...
              onPress={() => reload.read()}
            />
          </View>
          <Host matchContents={{ vertical: true }}>
            <TextInput
              testID="files-search"
              placeholder="Find a file"
              autoCapitalize="none"
              autoCorrect={false}
              onChangeText={setSearch}
              value={searchValue}
              style={inputStyle}
              textStyle={{
...
